infra/terraform/k8s/manifests/api_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: "${project_name}-${environment}-api-gateway"
spec:
  gatewayClassName: aws-alb-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS
    port: 443
    hostname: ${domain_name}
    tls:
      mode: Terminate
      options:
        alb.ingress.kubernetes.io/certificate-arn: ${acm_cert_arn}
